need to do the shitty work now

--- a/scrape-wiki/data/name_to_html_filenames.yml
+++ b/scrape-wiki/data/name_to_html_filenames.yml
@@ -348,7 +348,6 @@ Mead: ./data/html/0393.html
 Melon: ./data/html/0290.html
 Metaxa: ./data/html/0459.html
 Mezcal: ./data/html/0433.html
-Michael Joseph Hoeppner: ./data/html/0540.html
 Michelada: ./data/html/0034.html
 Mickey Slim: ./data/html/0101.html
 Midori (liqueur): ./data/html/0289.html
@@ -498,6 +497,7 @@ Tequila Slammer: ./data/html/0162.html
 Tequila Sunrise (cocktail): ./data/html/0163.html
 Tex-Mex: ./data/html/0165.html
 Tharra: ./data/html/0439.html
+The Code of Marcia Gray: ./data/html/0540.html
 The Fine Art of Mixing Drinks: ./data/html/0352.html
 The Roosevelt New Orleans: ./data/html/0228.html
 Three Wise Men (cocktail): ./data/html/0222.html
@@ -515,8 +515,8 @@ Tuxedo (cocktail): ./data/html/0112.html
 U-Boot (beer cocktail): ./data/html/0039.html
 Unicum: ./data/html/0460.html
 Up to Date (cocktail): ./data/html/0236.html
-User contributions for 208.83.199.98: ./data/html/0534.html
-User talk:208.83.199.98: ./data/html/0533.html
+User contributions for 12.187.136.98: ./data/html/0534.html
+User talk:12.187.136.98: ./data/html/0533.html
 Vampiro (cocktail): ./data/html/0164.html
 Vermouth: ./data/html/0234.html
 Vesper (cocktail): ./data/html/0027.html
