--- a/scrape-wiki/data/name_to_links.yml
+++ b/scrape-wiki/data/name_to_links.yml
@@ -348,7 +348,6 @@ Mead: https://en.wikipedia.org/wiki/Mead
 Melon: https://en.wikipedia.org/wiki/Melon
 Metaxa: https://en.wikipedia.org/wiki/Metaxa
 Mezcal: https://en.wikipedia.org/wiki/Mezcal
-Michael Joseph Hoeppner: https://en.wikipedia.org/wiki/Special:Random
 Michelada: https://en.wikipedia.org/wiki/Michelada
 Mickey Slim: https://en.wikipedia.org/wiki/Mickey_Slim
 Midori (liqueur): https://en.wikipedia.org/wiki/Midori_liqueur
@@ -498,6 +497,7 @@ Tequila Slammer: https://en.wikipedia.org/wiki/Tequila_Slammer
 Tequila Sunrise (cocktail): https://en.wikipedia.org/wiki/Tequila_Sunrise_(cocktail)
 Tex-Mex: https://en.wikipedia.org/wiki/Tex-Mex_cuisine
 Tharra: https://en.wikipedia.org/wiki/Tharra
+The Code of Marcia Gray: https://en.wikipedia.org/wiki/Special:Random
 The Fine Art of Mixing Drinks: https://en.wikipedia.org/wiki/The_Fine_Art_of_Mixing_Drinks
 The Roosevelt New Orleans: https://en.wikipedia.org/wiki/The_Roosevelt_New_Orleans_Hotel
 Three Wise Men (cocktail): https://en.wikipedia.org/wiki/Three_Wise_Men_(cocktail)
@@ -515,8 +515,8 @@ Tuxedo (cocktail): https://en.wikipedia.org/wiki/Tuxedo_(cocktail)
 U-Boot (beer cocktail): https://en.wikipedia.org/wiki/U-Boot_(beer_cocktail)
 Unicum: https://en.wikipedia.org/wiki/Unicum
 Up to Date (cocktail): https://en.wikipedia.org/wiki/Up_to_Date_(cocktail)
-User contributions for 208.83.199.98: https://en.wikipedia.org/wiki/Special:MyContributions
-User talk:208.83.199.98: https://en.wikipedia.org/wiki/Special:MyTalk
+User contributions for 12.187.136.98: https://en.wikipedia.org/wiki/Special:MyContributions
+User talk:12.187.136.98: https://en.wikipedia.org/wiki/Special:MyTalk
 Vampiro (cocktail): https://en.wikipedia.org/wiki/Vampiro_(cocktail)
 Vermouth: https://en.wikipedia.org/wiki/Vermouth
 Vesper (cocktail): https://en.wikipedia.org/wiki/Green_Vesper_(cocktail)
